# fp-ineq

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/reports/: credit_composite_qtr.json  fed_funds_qtr.json  fit_summary.json  gini_households_qtr.json  home_equity_qtr.json  household_networth_qtr.json  median_real_income_qtr.json  poverty_all_qtr.json  poverty_child_qtr.json  snap_persons_qtr.json  social_security_qtr.json  transfer_composite_qtr.json  ui_benefits_qtr.json  wealth_share_gap_top10_bottom50_qtr.json  wealth_share_gap_top1_bottom50_qtr.json
data/series/: credit_composite_qtr.csv  fed_funds_qtr.csv  gini_households_qtr.csv  home_equity_qtr.csv  household_networth_qtr.csv  median_real_income_qtr.csv  poverty_all_qtr.csv  poverty_child_qtr.csv  snap_persons_qtr.csv  social_security_qtr.csv  transfer_composite_qtr.csv  ui_benefits_qtr.csv  wealth_share_gap_top10_bottom50_qtr.csv  (+1 more)
docs/: app.js  bridge_metadata.json  bridge_results.csv  dictionary.json  index.html  manifest.json  presets.json  shareable-overlay-architecture.md  styles.css
reference/: data-sources.md  fair_variable_semantics.yaml  methodology.md
scripts/: refresh_from_fp_wraptr.sh
tests/: test_data_pipeline.py  test_discrepancy_inventory.py  test_export_loadformat_window.py  test_export_phase1_solved.py  test_fair_variable_semantics.py  test_phase1_compose.py  test_phase1_contrary_audit.py  test_phase1_distribution_block.py  test_phase1_transfer_core.py  test_phase1_ui.py  test_phase2_credit.py  test_phase2_ui_offset.py  test_phase2_wealth.py  test_scenario_ladders.py
(+67 files in other folders)
